introduce-partner-business-role (#16)
Co-authored-by: Michael Hoennig <michael@hoennig.de>
Reviewed-on: https://dev.hostsharing.net/hostsharing/hs.hsadmin.ng/pulls/16
Reviewed-by: Timotheus Pokorra <timotheus.pokorra@hostsharing.net>